# lite3-native-addon

./: .gitignore  .gitmodules  .releaserc.cjs  CMakeLists.txt  README.md  binding.gyp  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  release.yml
include/: lite3-napi.h
src/: addon.c  addon_decode.c  addon_encode.c  addon_proxy.c  index.ts  proxy.ts
test/: encode-decode.test.ts  lite3-buffer.test.ts  proxy.test.ts
